[package]
name = "neon-tui"
version = "0.1.0"
authors = ["Clemens Horn <me@clemenshorn.com>"]
edition = "2021"
license = "MIT"
description = "Terminal UI control plane for local Neon (serverless Postgres)"

[[bin]]
name = "neon-tui"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
crossterm = { version = "0.28", features = ["event-stream"] }
ratatui = "0.29"
tokio = { version = "1.48.0", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
toml = "0.8"
dirs = "6"
libc = "0.2"
ureq = "2"
